fixed spacing in service area section, increased hamburger and logo sizes on mobile

--- a/src/Components/Footer/_Footer.module.scss
+++ b/src/Components/Footer/_Footer.module.scss
@@ -26,8 +26,8 @@
 }
 
 .logo {
-    height:4rem;
-    width:4rem;
+    height:5rem;
+    width:5rem;
     margin: $margin-sm 0;
 }
 
