--- a/src/Components/UI/NavBar/NavBar.css
+++ b/src/Components/UI/NavBar/NavBar.css
@@ -173,7 +173,8 @@
     top: 0;
     right: 0;
     transform: translate(-0.3rem, 0.7rem);
-    height: 3rem;
+    height: 4rem;
+    width: 4rem;
     cursor: pointer;
     z-index: 250;
   }
@@ -197,17 +198,19 @@
 
 @media screen and (max-width: 700px) {
   .logo {
-    height: 3rem;
-    width: 3rem;
-    transform: translateY(0px);
+    height: 5rem;
+    width: 5rem;
+    /* transform: translateY(0px); */
   }
 
   .menu-icon {
-    height: 2rem
+    height: 4rem;
+    width: 4rem;
   }
 
   .close {
-    height: 2rem
+    height: 4rem;
+    width: 4rem;
   }
 
   .nav-links {
